# HumanCursor

./: .gitignore  ALL_IN_ONE_README.md  LICENSE  PENDING_ISSUES.MD  README.md  pyproject.toml
humancursor/: constants.py  system_cursor.py  web_cursor.py
humancursor/HCScripter/: __init__.py  all_in_one_gui.py  gui.py  launch.py  launch_all_in_one.py
humancursor/test/: __init__.py  system.py  web.py
humancursor/utilities/: __init__.py  calculate_and_randomize.py  human_curve_generator.py  web_adjuster.py
