[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HumanCursor"
version = "2.2.0"
authors = [
  { name="axeljackal" },
]
description = "Simulate Human Cursor Movement for Automated Scripts. Based on the original work of Flori Batusha."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International" }
dependencies = [
    "selenium >= 4.9.0",
    "pyautogui >= 0.9.53",
    "numpy >= 1.24.3",
    "pytweening >= 1.0.4",
    "pynput >= 1.7.6"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/axeljackal/HumanCursor"
